k8s/istio/ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ecommerce-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "gateway.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-route
  namespace: istio-system
spec:
  hosts:
    - "gateway.local"
  gateways:
    - ecommerce-gateway
  http:
    - route:
        - destination:
            host: gateway.apps.svc.cluster.local
            port:
              number: 8080
